[gd_scene load_steps=3 format=2]

[ext_resource path="res://minimap_mask.png" type="Texture" id=1]
[ext_resource path="res://Scenes/MiniMap.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapContainer" type="ViewportContainer" parent="."]
light_mask = 4
margin_left = 20.0
margin_top = 20.0
margin_right = 276.0
margin_bottom = 276.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="MapContainer"]
light_mask = 4
position = Vector2( 128, 128 )
scale = Vector2( 1.00655, 1.00527 )
texture = ExtResource( 1 )
mode = 3
range_item_cull_mask = 4

[node name="MapBG" type="ColorRect" parent="MapContainer"]
show_behind_parent = true
light_mask = 4
margin_right = 256.0
margin_bottom = 256.0

[node name="MapViewport" type="Viewport" parent="MapContainer"]
size = Vector2( 256, 256 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="MapContainer/MapViewport"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
cull_mask = 2
projection = 1
size = 40.0

[node name="Camera2" type="Camera" parent="MapContainer/MapViewport"]
visible = false
